--- a/package.json
+++ b/package.json
@@ -2,19 +2,14 @@
   "name": "crud-2",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/odiegosilva1/crud-2.git",
+  "repository": "https://github.com/odiegosilva1/CRUD-Lista-Recados.git",
   "author": "Diego Silva <odiegosilvadev@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
     "sucrase": "^3.34.0"
-  },
-  "scripts": {
-    "dev": "nodemon src/index.js"
   }
 }
