add: express server

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "nodemon": "^3.0.1",
     "sucrase": "^3.34.0"
-  }
+  },
+  "scripts": {
+    "dev": "nodemon src/index.js"
+    }
 }
